add cognitive service

--- a/src/app/display-page/display-page.component.css
+++ b/src/app/display-page/display-page.component.css
@@ -1,1 +1,9 @@
 /* Add mobile styles for the component here.  */
+.face{
+    font-size: 60;
+    /* horizontal-align: center; */
+}
+
+.text{
+    font-size: 23;
+}
